# japanese-asmr-parser

./: .gitignore  main.py  parser.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  test.py
.github/workflows/: python-publish.yml
src/japanese_asmr/: parser.py
