[metadata]
name = japanese_asmr
version = 0.2.5
author = Marnixah
author_email = japanese_asmr@marnixah.com
description = A parser for ASMR recordings from https://japaneseasmr.com/
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marnixah/japanese-asmr-parser
project_urls =
    Bug Tracker = https://github.com/marnixah/japanese-asmr-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests-html
    click
[options.packages.find]
where = src